# trading-rl-environment

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
examples/: action_strategies_demo.py  basic_usage.py  data_modes_demo.py  render_demo.py  with_indicators.py
src/trading_rl_environment/: __init__.py  action_strategy.py  enums.py  env.py  observation_builder.py  reward_strategy.py
tests/: conftest.py  test_data_modes.py  test_edge_cases.py  test_env.py  test_observation_builder.py  test_reward_strategies.py
utils/: load_candles.py
